(library
 (name Clarity)
 (modules Clarity)
 (wrapped false)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (preprocessor_deps
  Clarity/compile.ml
  Clarity/compile.mli
  Clarity/grammar.ml
  Clarity/library.ml
  Clarity/library.mli
  Clarity/parse.ml
  Clarity/parse.mli
  Clarity/print.ml
  Clarity/print.mli)
 (libraries SWIR num sexplib))

(library
 (name JavaScript)
 (modules JavaScript)
 (wrapped false)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (preprocessor_deps)
 (libraries Clarity SWIR num str))

(library
 (name SWIR)
 (modules SWIR)
 (wrapped false)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (preprocessor_deps
  SWIR/grammar.ml
  SWIR/print.ml
  SWIR/print.mli)
 (libraries num))

(library
 (name WebAssembly)
 (modules WebAssembly)
 (wrapped false)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (preprocessor_deps)
 (libraries SWIR num wasm))

(library
 (name Yul)
 (modules Yul)
 (wrapped false)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (preprocessor_deps
  Yul/grammar.ml
  Yul/print.ml
  Yul/print.mli)
 (libraries num))
