(ocamllex lexer)

(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (chdir %{workspace_root}
   (run %{bin:menhir} %{deps}))))

(library
 (name Clarity)
 (modules Clarity)
 (wrapped false)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (preprocessor_deps
  compare.ml
  compare.mli
  compile.ml
  compile.mli
  grammar.ml
  integer.ml
  integer.mli
  lexer.ml
  lexer.mli
  library.ml
  library.mli
  parse.ml
  parse.mli
  parser.ml
  parser.mli
  print.ml
  print.mli
  sexp.ml
  sexp.mli)
 (libraries SWIR menhirLib num))
